force-app/main/default/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>Sum_Rating__c  /  Count_Attendee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Attendee__c</fullName>
        <label>Count Attendee</label>
        <summaryForeignKey>Attendee__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Locations__c</fullName>
        <label>Loca</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sum_Rating__c</fullName>
        <label>Sum Rating</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Training_Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Topics__c</fullName>
        <label>Training Topics</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Page Layouts</fullName>
                </value>
                <value>
                    <fullName>Validation Rules</fullName>
                </value>
                <value>
                    <fullName>Record Types</fullName>
                </value>
                <value>
                    <fullName>Custom Fields</fullName>
                </value>
                <value>
                    <fullName>Apex</fullName>
                </value>
                <value>
                    <fullName>Triggers</fullName>
                </value>
                <value>
                    <fullName>Flows</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Locations__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>We</fullName>
        <active>true</active>
        <label>We</label>
    </recordTypes>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wo</fullName>
        <active>true</active>
        <label>Wo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshops</fullName>
        <active>true</active>
        <label>Workshops</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Session_Date</fullName>
        <active>true</active>
        <description>To Ensure Session Date is in Future</description>
        <errorConditionFormula>LastActivityDate  &lt;  TODAY()</errorConditionFormula>
        <errorMessage>Session Date should be in Future !!</errorMessage>
    </validationRules>
</CustomObject>